--- a/configs/quant_int8_vllm.yml
+++ b/configs/quant_int8_vllm.yml
@@ -12,7 +12,7 @@ calib:
     n_samples: 128
     bs: -1
     seq_len: 512
-    preproc: general
+    preproc: pileval_awq
     seed: *seed
 eval:
     eval_pos: [fake_quant]
